[NCL-8992] implement Named Queues
The 'default' queue (if queue is left unspecified) can be accessed through 'null' key and always exists. Regarding named queues, they are created through setConcurrentNamed POST method in REST API and values (max, current running) accessed through GET methods. Tasks that relate to each other have no limitations and each can be in a different queue if desired.
